Some Changes and Added accepting links as requests